<?xml version="1.0"?>
<package>
  <name>lvins</name>
  <version>0.0.0</version>
  <description>The lvins package</description>
  <maintainer email="ren@qq.com">ren</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>map_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>message_generation</build_depend>
  <!-- <build_depend>cv_bridge</build_depend> -->
  <build_depend>image_transport</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>map_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>message_runtime</run_depend>
  <!-- <run_depend>cv_bridge</run_depend> -->
  <run_depend>image_transport</run_depend>
  
  <export>
  </export>
</package>
